# payment_service

./: .env  Dockerfile.dev  ading_Kong  compose.yml  help.txt  procedure.txt  protobuf.txt  pyproject.toml  schema.txt
payment/: db.py  main.py  model.py  payment.proto  payment_pb2.py  setting.py
payment/consumers/: payment_consumer.py
payment/crud/: payment_crud.py
payment/kafka/: schema_registry.py
router/: payment.py
service_two/: Dockerfile.dev  pyproject.toml
service_two/app/: main.py
tests/: test_payment.py
